Fix image paths and clean up HTML comments

--- a/index.html
+++ b/index.html
@@ -2,15 +2,13 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-  <link rel="stylesheet" href="style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&family=Montserrat:wght@100..900&display=swap" rel="stylesheet">
   <title>Frontend Mentor | Product preview card component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
@@ -20,8 +18,8 @@
 <div class="card ">
   <picture>
   
-  <source srcset="images/image-product-desktop.jpg" media="(width > 600px)"  >
-    <img src="./images/image-product-mobile.jpg" alt="Perfume bottle" class="product-image">
+  <source src="images/image-product-desktop.jpg" media="(width > 600px)"  >
+    <img src="image-product-desktop.jpg" alt="Perfume bottle" class="product-image">
  
   </picture>
  <div class="body">
@@ -38,7 +36,7 @@
 </div>
 
  <button>
-  <img src="images/icon-cart.svg" alt="card">
+  <img src="icon-cart.svg" alt="card">
  <span>Add to Cart</span> 
 </button> 
 </div>
