Fix image source path in index.html

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <div class="card ">
   <picture>
   
-  <source src="images/image-product-desktop.jpg" media="(width > 600px)"  >
+  <source src="image-product-desktop" media="(width > 600px)"  >
     <img src="image-product-desktop.jpg" alt="Perfume bottle" class="product-image">
  
   </picture>
